@@ -1,3 +1,7 @@
+2004-06-26  Todd Berman  <tberman@off.net>
+
+	* Gui/Dialogs/DirtyFilesDialog.cs: small layout fixes.
+
 2004-06-26  Lluis Sanchez Gual  <lluis@ximian.com>
 
 	* Commands/RunCommands.cs, Services/Project/DefaultProjectService.cs,
